--- a/index.html
+++ b/index.html
@@ -4,12 +4,55 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JHONTRAKTOR</title>
-        <link rel="icon" type="image/x-icon" href="">
+        <link rel="icon" type="image/x-icon" href="/images/logo.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="./styles/reset.css">
         <link rel="stylesheet" href="./styles/styles.css">
         <link rel="stylesheet" href="./styles/responsive.css">
     </head>
-    <body>
+    <body> 
+        <header>
+            <img src="/images/logo.png" alt="logo">
+            <div class="header-nav">
+                <nav>
+                    <ul>
+                        <li><a href="/" class="active-page">Home</a></li>
+                        <li><a href="/">About Us</a></li>
+                        <li><a href="/">Service</a></li>
+                        <li><a href="/">Project</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <button type="button" class="burger-button">
+                <i class="fa-solid fa-bars fa-xl"></i>
+            </button>
+            <div class="header-right">
+                <div class="header-select">
+                    <select name="languages" id="languages">
+                        <option selected value="English">English</option>
+                        <option value="German">German</option>
+                        <option value="Georgian">Georgian</option>
+                        <option value="Spanish">Spanish</option>
+                    </select>
+                </div>
+                <button type="button">Contact Us</button>
+            </div>
+        </header>
+        <section id="main-section">
+            <div class="img-container">
+                <img src="/images/workers.png" alt="people working">
+            </div>
+            <div class="main-section-content">
+                <h2>We Prepare For The <span class="header-orange">Future</span></h2>
+                <p>We provide the best architectural design, contruction, and building maintance services for you.</p>
+                <di class="buttons">
+                    <a href="/">Our Services<i class="fa-regular fa-circle-right"></i></a>
+                    <a href="/">View Project</a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
