fix: fixed img URLs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JHONTRAKTOR</title>
-        <link rel="icon" type="image/x-icon" href="/images/logo.png">
+        <link rel="icon" type="image/x-icon" href="images/logo.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     </head>
     <body> 
         <header>
-            <img src="/images/logo.png" alt="logo">
+            <img src="images/logo.png" alt="logo">
             <div class="header-nav">
                 <nav>
                     <ul>
@@ -43,7 +43,7 @@
         </header>
         <section id="main-section">
             <div class="img-container">
-                <img src="/images/workers.png" alt="people working">
+                <img src="images/workers.png" alt="people working">
             </div>
             <div class="main-section-content">
                 <h2>We Prepare For The <span class="header-orange">Future</span></h2>
