fix: fixed typo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="main-section-content">
                 <h2>We Prepare For The <span class="header-orange">Future</span></h2>
                 <p>We provide the best architectural design, contruction, and building maintance services for you.</p>
-                <di class="buttons">
+                <div class="buttons">
                     <a href="/">Our Services<i class="fa-regular fa-circle-right"></i></a>
                     <a href="/">View Project</a>
                 </div>
