feat: added middle section

--- a/index.html
+++ b/index.html
@@ -54,5 +54,49 @@
                 </div>
             </div>
         </section>
+        <section id="middle-section">
+            <div class="section-header">
+                <h2>Featured Project</h2>
+                <div class="inner-nav">
+                    <ul>
+                        <li class="active"><a href="/">All Works</a></li>
+                        <li><a href="/">Construction</a></li>
+                        <li><a href="/">Architecture</a></li>
+                        <li><a href="/">Building</a></li>
+                        <li><a href="/">Renovations</a></li>
+                        <li><a href="/">Interior</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="middle-section-tiles">
+                <div class="tile">
+                    <img src="images/picture-1.png" alt="building">
+                    <div class="effect"></div>
+                    <div class="tile-content">
+                        <p>Skyskuy Tower</p>
+                        <p>Renovation & Architecture</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <img src="images/picture-2.png" alt="building">
+                    <div class="effect"></div>
+                    <div class="tile-content">
+                        <p>The Fallingwater House</p>
+                        <p>Building & Interior</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <img src="images/picture-3.png" alt="building">
+                    <div class="effect"></div>
+                    <div class="tile-content">
+                        <p>The Orange Apartemen</p>
+                        <p>Construction & Interior</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button-container">
+                <button type="button">Explore All Projects<i class="fa-regular fa-circle-right" style="color: #191A19;"></i></button>
+            </div>
+        </section>
     </body>
 </html>
