feat: added bottom section

--- a/index.html
+++ b/index.html
@@ -98,5 +98,48 @@
                 <button type="button">Explore All Projects<i class="fa-regular fa-circle-right" style="color: #191A19;"></i></button>
             </div>
         </section>
+        <section id="bottom-section">
+            <h3>What Our Client Says</h3>
+            <div class="client-says">
+                <p>I am very satisfied with the services. Their team is very professional and efficient in completing our project on time and at a very affordable cost. The quality of their work is very good and I highly recommend this company for any construction project.</p>
+                <p>Tom DeLonge</p>
+                <p>CEO, Lexmark</p>
+            </div>
+            <h2>Leading Way In Building & Civil Construction</h2>
+            <div class="form-container">
+                <div class="form">
+                    <h4>Request A Quote</h4>
+                    <p>Complete control over products allow us to our customers the best quality prices and services. We take great pride in everything that we do in Jhontraktor </p>
+                    <form action="/">
+                        <div class="name-and-email-inputs">
+                            <input type="text" placeholder="Name" id="name" />
+                            <input type="email" placeholder="Email" id="mail" />
+                        </div>
+                        <div class="phone-and-service-inputs">
+                            <input type="number" placeholder="Phone" id="phone" />
+                            <select name="services" id="services">
+                                <option selected disabled>Select Your Service</option>
+                                <option value="Service">Service</option>
+                                <option value="Service">Service</option>
+                                <option value="Service">Service</option>
+                            </select>
+                        </div>
+                        <textarea placeholder="Additional Details!"></textarea>
+                    </form>
+                    <button type="button">Submit Request</button>
+                </div>
+                <div class="contact-info">
+                    <h4>Contact Info</h4>
+                    <h5>Our Location</h5>
+                    <p>18 Office Park Building 21th Floor Unit C. Jl.<br> TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+                    <h5>Quick Contact</h5>
+                    <p><a href="callto:628772469246">Call Us : (+62) 877-2469-7246</a><a href="mailto:contact@jhontraktor.com"><br> Email : contact@jhontraktor.com</a></p>
+                    <h5>Opening Hours</h5>
+                    <p>Monday - Friday <br> AM - 06:00 PM</p>
+                    <h4>Do You Have Any Question, Just Contact Us To Get Help!</h4>
+                    <button type="button">Contact Us</button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
