fix: fixed input type

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <input type="email" placeholder="Email" id="mail" />
                         </div>
                         <div class="phone-and-service-inputs">
-                            <input type="number" placeholder="Phone" id="phone" />
+                            <input type="text" placeholder="Phone" id="phone" />
                             <select name="services" id="services">
                                 <option selected disabled>Select Your Service</option>
                                 <option value="Service">Service</option>
