feat: added footer

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                     <p>Complete control over products allow us to our customers the best quality prices and services. We take great pride in everything that we do in Jhontraktor </p>
                     <form action="/">
                         <div class="name-and-email-inputs">
-                            <input type="text" placeholder="Name" id="name" />
-                            <input type="email" placeholder="Email" id="mail" />
+                            <input type="text" placeholder="Name" id="name">
+                            <input type="email" placeholder="Email" id="mail">
                         </div>
                         <div class="phone-and-service-inputs">
-                            <input type="text" placeholder="Phone" id="phone" />
+                            <input type="text" placeholder="Phone" id="phone">
                             <select name="services" id="services">
                                 <option selected disabled>Select Your Service</option>
                                 <option value="Service">Service</option>
@@ -141,5 +141,47 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-top">
+                <img src="images/logo-white.png" alt="white logo">
+                <div class="subscribe">
+                    <label for="subscribe">Subscribe To Our Newslatter :</label>
+                    <div class="input-container">
+                        <input type="text" id="subscribe" placeholder="Enter your email addres">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-middle">
+                <div>
+                    <p>About Us</p>
+                    <p>We have the confidence to provide the best service for you, with the support of Professional and Certified HR that we currently have and the high-quality materials we use and structured work techniques, we will be able to realize timely completion of work.</p>
+                </div>
+                <div>
+                    <p>Office</p>
+                    <p>18 Office Park Building 21th Floor Unit C.<br>Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+                </div>
+                <div>
+                    <p>Contact</p>
+                    <p><a href="mailto:contact@jhontracktor.co">Email : contact@jhontracktor.com</a><br><a href="callto:6287724697246">Phone : (+62) 877-2469-7246</a></p>
+                </div>
+                <div>
+                    <p>Link</p>
+                    <ul class="links">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Abot Us</a></li>
+                        <li><a href="/">Service</a></li>
+                        <li><a href="/">Project</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="social-media-links">
+                <a href="/"><img src="images/linkedin.png" alt="linkedin"></a>
+                <a href="/"><img src="images/medium.png" alt="mediums"></a>
+                <a href="/"><img src="images/instagram.png" alt="instagram"></a>
+                <a href="/"><img src="images/twitter.png" alt="twitter"></a>
+                <a href="/"><img src="images/facebook.png" alt="facebook"></a>
+            </div>
+        </footer>
     </body>
 </html>
